# scrap-job

./: .gitignore  README.md  dockerfile  entry_point.sh  main.py  pyproject.toml
api/: crud.py  main.py  schemas.py
db/: config.py  connection.py  creation.py  load_companies.py
db/tests/: test_config.py  test_connection.py  test_creation.py  test_load_companies.py
scrap_job/: companies.csv  scrap.py
scrap_job/tests/: tests.py
static/: index.html  script.js  style.css
